style.css
 /* Fonts */
 @font-face {
   src: url(./fonts/Poppins/Poppins-Medium.ttf);
   font-family: "Poppins";
   font-weight: 500;
 }

 @font-face {
   src: url(./fonts/Poppins/Poppins-SemiBold.ttf);
   font-family: "Poppins";
   font-weight: 600;
 }

 @font-face {
   src: url(./fonts/Poppins/Poppins-Bold.ttf);
   font-family: "Poppins";
   font-weight: 700;
 }

 @font-face {
   src: url(./fonts/Poppins/Poppins-Regular.ttf);
   font-family: "Poppins";
   font-weight: 400;
 }

 @font-face {
   src: url(./fonts/Lato/Lato-Bold.ttf);
   font-family: "Lato";
   font-weight: 700;
 }

 @font-face {
   src: url(./fonts/Lato/Lato-Regular.ttf);
   font-family: "Lato";
   font-weight: 400;
 }

 /* Simulator */
 .gis_user_wrapper {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
   text-align: left;
   padding: 10px;
 }

 .gis_user_name {
   font-weight: 500;
   font-size: 14px;
   color: rgba(0, 0, 0, 0.5);
 }

 /* Reset */
 body,
 html {
   font-family: 'Poppins';
   font-weight: 500;
   height: 100%;
   width: 100%;
   margin: 0px;
   text-align: center;
 }

 /* Layout */
 .gis_layout {
   display: grid;
   grid-template-rows: 100px 1fr auto;
   height: 100%;
   background: url(/images/background.svg) no-repeat;
   background-size: cover;
 }

 .gis_banners {
   display: flex;
   align-items: center;
   flex-direction: column;
 }

 .gis_wrapper {
   width: 1092px;
   max-width: calc(100vw - 32px);
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
 }

 .gis_main {
   overflow: scroll;
 }

 /* Header */
 .gis_header_wrapper {
   margin: 0px auto;
   height: 100px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }

 .gis_main.show_canvas .gis_instruction {
   display: none;
 }

 .gis_main.show_canvas #gis_canvas_div {
   display: block;
 }

 .gis_logo {
   display: flex;
   align-items: center;
 }

 .gis_logo_label {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   top: 6px;
   text-transform: uppercase;
   margin-left: 8px;
   color: #363636;
   vertical-align: middle;
 }

 .gis_logo_button {
   border: none;
   background: #EFF2F6;
   border-radius: 100px;
   display: flex;
   height: 44px;
   align-items: center;
   justify-content: center;
   padding: 0 30px;
   font-size: 14px;
   font-weight: 700;
   color: #3E4462;
 }

 .gis_label_div {
   width: fit-content;
   top: 50%;
   position: relative;
   transform: translate(0%, -50%)
 }

 #gis_options_div {
   background: #FFFFFF;
   border: 1px solid #3E4462;
   box-shadow: 2px 2px 0px rgba(62, 68, 98, 0.2);
   border-radius: 4px;
   padding: 8px;
   position: absolute;
   text-align: left;
   z-index: 10;
 }

 .gis_options_title {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
   line-height: 14px;
   /* identical to box height, or 100% */

   text-transform: uppercase;

   color: #363636;

 }

 /* Body */
 .gis_instruction {
   width: 540px;
   padding: 20px;
   font-weight: 400;
   font-size: 18px;
   text-align: center;
 }

 /* Canvas */
 #gis_canvas_div {
   position: relative;
   width: 100%;
   height: 90%;
   display: none;
 }

 #image-context {
   z-index: 2 !important;
   height: 100% !important;
 }

 .gis_input_wrapper {
   background: #FFFFFF;
   border: 1px solid #DBDBDB;
   border-radius: 4px;
   height: 48px;
   display: flex;
   align-items: center;
   padding: 0 16px;
   font-family: 'Lato';
   max-width: calc(100vw - 4rem);
   width: 306px;
   justify-content: space-between;
 }

 .gis_input_field {
   display: flex;
 }

 .gis_input_label {
   font-size: 14px;
   margin-right: 16px;
   line-height: 22px;
   font-weight: 700;
 }

 .wealth_div {
   z-index: 10;
   background: #FFFFFF;
   border: 1px solid #D0DEEA;
   border-radius: 4px;
   box-shadow: 4px 4px 0px
 }

 .distribution_div {
   color: #fff;
   background: #3E4462;
   border: 1px solid #FFFFFF;
   z-index: 10;
   padding: 3px !important;
   border-radius: 6px;
   position: absolute;
   text-align: left;
 }

 /* Inputs */
 .gis_amount {
   border: none;
   font-size: 16px;
   width: 4rem;
 }

 /* Buttons */
 .gis_buttons {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   height: 48px;
   max-width: 340px;
   text-align: center;
   width: 100%;
   background-color: #0288D1;
   border: 1px solid #0288D1;
   border-radius: 4px;
   color: #fff;
   font-family: 'Lato';
   font-style: normal;
   font-weight: 800;
   font-size: 16px;
   line-height: 20px;
 }

 .gis_currency {
   color: #707070;
   width: 50px;
   text-align: right;
 }

 /* Footer */

 .gis_footer {
   background: #3B405C;
   min-height: 100px;
   padding: 8px;
   box-sizing: border-box;
 }

 .gis_footer_wrapper {
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
   height: 100%;
   gap: 16px;
 }

 .gis_payment_wrapper {
   background: #FFFFFF;
   border: 1px solid #D0DEEA;
   border-radius: 4px;
 }

 .gis_payment_button,
 .gis_leave_button {
   background: #0288D1;
   border-radius: 0px 4px 4px 0px;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
   letter-spacing: 0.1px;
   color: #FFFFFF;
   border: none;
 }

 .gis_payment_input,
 .gis_currency_input {
   font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 24px;
   /* identical to box height, or 200% */

   letter-spacing: -0.3px;

   color: #363636;
 }

 .gis_currency_input input {
   border: 0;
   width: 48px;
 }

